test/corpus/ring_oscillator.txt
==================
ring oscillator
==================

ring oscillator
.include modelcard.CMOS90

m1 out1 vg1 0 0 N90 W=10.0u L=0.09u M=10
m2 out1 vg1 vdd vdd P90 W=10.0u L=0.09u M=10

m3 out2 out1 0 0 N90 W=10.0u L=0.09u M=10
m4 out2 out1 vdd vdd P90 W=10.0u L=0.09u M=10

m5 vg1 out2 0 0 N90 W=10.0u L=0.09u M=10
m6 vg1 out2 vdd vdd P90 W=10.0u L=0.09u M=10

c1 out1 0 0.1p
c2 out2 0 0.1p
c3 vg1 0 0.1p

vdd vdd 0 1.8

.tran 1p 2n

.end

---

(source_file
  (title_line)
  (body_line
    (control_line
      (dotted_identifier)))
  (body_line
    (m)
    (part_number)
    (node)
    (node)
    (node)
    (node)
    (identifier)
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value)))
  (body_line
    (m)
    (part_number)
    (node)
    (node)
    (node)
    (node)
    (identifier)
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value)))
  (body_line
    (m)
    (part_number)
    (node)
    (node)
    (node)
    (node)
    (identifier)
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value)))
  (body_line
    (m)
    (part_number)
    (node)
    (node)
    (node)
    (node)
    (identifier)
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value)))
  (body_line
    (m)
    (part_number)
    (node)
    (node)
    (node)
    (node)
    (identifier)
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value)))
  (body_line
    (m)
    (part_number)
    (node)
    (node)
    (node)
    (node)
    (identifier)
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value))
    (assignment
      (identifier)
      (value)))
  (body_line
    (c)
    (part_number)
    (node)
    (node)
    (value))
  (body_line
    (c)
    (part_number)
    (node)
    (node)
    (value))
  (body_line
    (c)
    (part_number)
    (node)
    (node)
    (value))
  (body_line
    (v)
    (part_number)
    (node)
    (node)
    (dc
      (value)))
  (body_line
    (control_line
      (value)
      (value)))
  (body_line
    (control_line)))
